--- a/config/database.yml
+++ b/config/database.yml
@@ -56,7 +56,10 @@ development:
 test:
   <<: *default
   database: scrappy_web_test
-
+  username: scrappy_web
+  password: scrappy_web@pwd!
+  host: localhost
+  port: 5432
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
