--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,8 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  username: MyString
-  password_digest: MyString
-  password_confirmation: MyString
+david:
+  username: david
+  password_digest: <%= BCrypt::Password.create('test') %>
+  password_confirmation: ""
   last_signin_at: 2024-05-24 21:36:24
 
-two:
-  username: MyString
-  password_digest: MyString
-  password_confirmation: MyString
-  last_signin_at: 2024-05-24 21:36:24
