--- a/test/fixtures/keywords.yml
+++ b/test/fixtures/keywords.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  keyword: MyString
+  keyword: keyword1
   user: david
 
 two:
-  keyword: MyString
+  keyword: keyword2
   user: david
