test: add keywords controller test

--- a/test/fixtures/keywords.yml
+++ b/test/fixtures/keywords.yml
@@ -5,5 +5,21 @@ one:
   user: david
 
 two:
-  keyword: keyword2
+  keyword: keyword12
   user: david
+
+three:
+  keyword: keyword21
+  user: david
+
+four:
+  keyword: keyword22
+  user: david
+
+five:
+  keyword: keyword23
+  user: david
+
+six:
+  keyword: keyword3
+  user: two
